--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="./styles/style.css"> 
 
-    <title>Integrador</title>
+    <title>Trabajo Integrador</title>
 </head>
 
 <body>
